--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- ICS20-Unit6-01-PWA -->
+<!-- ICS20-Unit5-06-HTML -->
 <html lang="en-ca">
   <head>
     <meta charset="UTF-8" />
