--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="theme-color" content="#FFFFFF" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Converting Fahrenheit to Celsius, with JS</title>
-    <link rel="canonical" href="https://joannesanthosh.github.io/ICS20-Unit6-01-PWA/" />
-    <link rel="manifest" href="/ICS20-Unit6-01-PWA/manifest.webmanifest" />
+    <link rel="canonical" href="https://joannesanthosh.github.io/ICS20-Unit5-06-HTML/" />
+    <link rel="manifest" href="/ICS20-Unit5-06-HTML/manifest.webmanifest" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"></noscript>
     <link rel="stylesheet" href="./css/style.css">
