--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
               </form>
               <!-- Raised button with ripple -->
               <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="convert()">
-                Convert
+                Enter
               </button>
               <br />
               <p>
-                <div id="celsius"></div>
+                <div id="answer"></div>
               </p>
             </th>
           </tr>          
